@@ -4,6 +4,10 @@
 	to QPDFObjectHandle with corresponding functions added to the C
 	API. Thanks to m-holger for the contribution.
 
+2022-01-17  Jay Berkenbilt  <ejb@ql.org>
+
+	* Add isDictionary and isArray to JSON
+
 2022-01-11  Jay Berkenbilt  <ejb@ql.org>
 
 	* Bug fix: add missing characters from PDF doc encoding.
